--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <li>Desarrollo de Aplicaciones, DevOps, especialista en productos digitales.</li>
       <li>Manejo de CMS de alto tráfico.</li>
       <li>Optimización de carga y estructura web.</li>
+      <li>Arquitecto de interfaces.</li>
     </ul>
+    <h2>Portafolio Util</h2>
+    <a href="https://guatevision.com">www.guatevision.com</a>
+    <a href="https://morgargt.com">www.morgargt.com</a>
+    <a href="https://iglesiallavesdesion.org">www.iglesiallavesdesion.org</a>
+    <a href="https://liderazgojuvenil.org">www.liderazgojuvenil.com</a>
   </body>
 </html>
