--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <li>Arquitecto de interfaces.</li>
     </ul>
     <h2>Portafolio Util</h2>
-    <a href="https://guatevision.com">www.guatevision.com</a>
-    <a href="https://morgargt.com">www.morgargt.com</a>
-    <a href="https://iglesiallavesdesion.org">www.iglesiallavesdesion.org</a>
-    <a href="https://liderazgojuvenil.org">www.liderazgojuvenil.com</a>
+    <a target="_blank" href="https://guatevision.com">www.guatevision.com</a>
+    <a target="_blank" href="https://morgargt.com">www.morgargt.com</a>
+    <a target="_blank" href="https://iglesiallavesdesion.org">www.iglesiallavesdesion.org</a>
+    <a target="_blank" href="https://liderazgojuvenil.org">www.liderazgojuvenil.com</a>
   </body>
 </html>
