--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <title>Portafolio by Edwin Castañeda</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
+  <style>
+    body{
+    background:black;
+      color: #d2fd2b;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 300;
+      font-size: 18px;
+    }
+    
+    a{
+      color: #fff900;
+      font-weight: bold;
+    }
+    
+    a:hover{
+      color: #d2fd2bc7;
+    }
+  </style>
   <body>
     <h1>Edwin Castañeda</h1>
     <h3>Ingeniero en Sistemas</h3>
@@ -15,7 +33,7 @@
       <li>Optimización de carga y estructura web.</li>
       <li>Arquitecto de interfaces.</li>
     </ul>
-    <h2>Portafolio Util</h2>
+    <h2>Portafolio Útil</h2>
     <ul>
       <li><a target="_blank" href="https://guatevision.com">www.guatevision.com</a></li>
       <li><a target="_blank" href="https://morgargt.com">www.morgargt.com</a></li>
