--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <li><a target="_blank" href="https://guatevision.com">www.guatevision.com</a></li>
       <li><a target="_blank" href="https://morgargt.com">www.morgargt.com</a></li>
       <li><a target="_blank" href="https://soypositivo.com">www.soypositivo.com</a></li>
-      <li><a target="_blank" href="https://iglesiallavesdesion.org">www.iglesiallavesdesion.org</a></li>
       <li><a target="_blank" href="https://liderazgojuvenil.org">www.liderazgojuvenil.com</a></li>
+      <li><a target="_blank" href="https://go2streaming.com">go2streaming.com</a></li>
+      <li><a target="_blank" href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://play.google.com/store/apps/developer%3Fid%3DGo2Streaming.com&ved=2ahUKEwiTyO6g5v3vAhUuRzABHSGDCIoQjjgwAHoECAQQAg&usg=AOvVaw1nqt_OoBk4og7LBQiTxjoi">Apps</a></li>
     </ul>
   </body>
 </html>
